fixed responsiveness for connect button
connect button text would line break at certain window sizes. Adjusted font classes so this does not happen.

--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -81,6 +81,7 @@
     margin-top: 1px;
     color: #e20c8d;
     font-weight: 500;
+    font-size: 9px;
 }
 
 .connect-wallet-icon {
@@ -98,7 +99,7 @@
     display: block;
     font-size: 12px;
     border-radius: 25px;
-    padding: 6px 10px 6px 10px;
+    padding: 6px 10px 5px 10px;
     margin-right: 4px;
     border: none;
     background: white;
